--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
+    "dotenv": "^16.4.5",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
