--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@react-three/fiber": "^8.17.10",
+    "@turf/helpers": "^7.1.0",
     "airtable": "^0.12.2",
+    "d3": "^7.9.0",
     "dotenv": "^16.4.5",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^3.8.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
