--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^3.8.0",
+    "mega": "^0.2.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
